--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,53 @@
   box-sizing: border-box; 
 }
 
+.navbar {
+  position: fixed;
+  top: 0;
+  right: 0;
+  height: 80px;
+  display: flex;
+  align-items: center;
+}
+
+.navbar * {
+  display: inline;
+}
+
+.navbar li {
+  margin: 20px;
+}
+
+.navbar a {
+  color: lightgreen;
+}
+
+.navbar a:hover {
+  color: lawngreen;
+}
+
+#hero {
+  margin-left: 10%;
+  margin-top: 18%;
+}
+
+.big-heading h1 {
+  font-size: 100px;
+}
+
+.big-heading h2 {
+  font-size: 75px;
+}
+
+.content {
+  display: block;
+  position: sticky;
+  margin-top: 10%;
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+h4 {
+  display: inline;
+}
+
