--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,11 @@
 * {
   box-sizing: border-box; 
+  font-family: 'Roboto';
+  color: white;
+}
+
+html {
+  background-image: linear-gradient(to right, #0f0c29, #302b63, #24243e);
 }
 
 .navbar {
@@ -20,7 +26,8 @@
 }
 
 .navbar a {
-  color: lightgreen;
+  color: white;
+  font-size: 30px;
 }
 
 .navbar a:hover {
@@ -28,27 +35,47 @@
 }
 
 #hero {
-  margin-left: 10%;
+  margin-left: 20%;
   margin-top: 18%;
 }
 
-.big-heading h1 {
+#hero h1 {
   font-size: 100px;
+  font-weight: 900;
+  margin-bottom: 0%;
 }
 
-.big-heading h2 {
-  font-size: 75px;
+#hero h2 {
+  font-size: 60px;
+  font-weight: 500;
 }
 
 .content {
   display: block;
   position: sticky;
   margin-top: 10%;
-  margin-left: 10%;
-  margin-right: 10%;
+  margin-left: 15%;
+  margin-right: 15%;
+}
+
+#about {
+  margin-top: 15%;
+}
+
+h2 {
+  font-size: 50px;
+}
+
+h3 {
+  font-size: 30px;
 }
 
 h4 {
   display: inline;
+  font-size: 20px;
+}
+
+p {
+  font-size: 20px;
 }
 
