--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,12 @@ html {
 
 .navbar {
   position: fixed;
-  top: 0;
-  right: 0;
+  bottom: 90%;
+  left: 37%;
   height: 80px;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .navbar * {
@@ -37,7 +38,7 @@ html {
 }
 
 #hero {
-  margin-left: 15%;
+  margin-left: 10%;
   margin-top: 18%;
 }
 
@@ -85,24 +86,6 @@ p {
   font-size: 20px;
 }
 
-button, input[type=submit] {
-  background-color: #41b853; /* Green */
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  font-family: 'Courier New';
-  font-weight: 700;
-  border-radius: 40px;
-}
-
-button a {
-  text-decoration: none;
-}
-
 .projects {
   display: grid;
   grid-template-columns: 100px 100px;
@@ -143,4 +126,47 @@ h6 {
   font-size: 30px;
   margin-bottom: 1%;
   margin-top: 1%;
+}
+
+button, input[type=submit], button a {
+  appearance: none;
+  backface-visibility: hidden;
+  background-color: #27ae60;
+  border-radius: 8px;
+  border-style: none;
+  box-shadow: rgba(39, 174, 96, .15) 0 4px 9px;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Inter,-apple-system,system-ui,"Segoe UI",Helvetica,Arial,sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  letter-spacing: normal;
+  line-height: 1.5;
+  outline: none;
+  overflow: hidden;
+  padding: 13px 20px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  transform: translate3d(0, 0, 0);
+  transition: all .3s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+}
+
+button:hover, input[type=submit]:hover  {
+  background-color: #1e8449;
+  opacity: 1;
+  transform: translateY(0);
+  transition-duration: .35s;
+  box-shadow: rgba(39, 174, 96, .2) 0 6px 12px;
+}
+
+button:active, input[type=submit]:activ, button a:active {
+  transform: translateY(2px);
+  transition-duration: .35s;
 }
