--- a/styles.css
+++ b/styles.css
@@ -27,19 +27,20 @@ html {
   margin: 20px;
 }
 
-.navbar a {
+.navbar a:not(button a) {
   color: white;
   font-size: 30px;
   text-decoration: none;
 }
 
-.navbar a:hover {
+.navbar a:hover:not(button a) {
   color: #43bee5;
 }
 
 #hero {
   margin-left: 10%;
   margin-top: 18%;
+  margin-bottom: 20%
 }
 
 #hero h1 {
@@ -51,6 +52,14 @@ html {
 #hero h2 {
   font-size: 60px;
   font-weight: 500;
+}
+
+.header-underline {
+  content: "";
+  width: 102px;
+  height: 5px;
+  background: #41b853;
+  display: block;
 }
 
 .content {
@@ -65,12 +74,9 @@ html {
   color: #43bee5;
 }
 
-#about {
-  margin-top: 15%;
-}
-
 h2 {
   font-size: 50px;
+  margin-bottom: 1%;
 }
 
 h3 {
@@ -128,45 +134,45 @@ h6 {
   margin-top: 1%;
 }
 
-button, input[type=submit], button a {
-  appearance: none;
-  backface-visibility: hidden;
-  background-color: #27ae60;
+button, input[type=submit] {
+  color: #41b853;
   border-radius: 8px;
-  border-style: none;
-  box-shadow: rgba(39, 174, 96, .15) 0 4px 9px;
-  box-sizing: border-box;
-  color: #fff;
-  cursor: pointer;
-  display: inline-block;
-  font-family: Inter,-apple-system,system-ui,"Segoe UI",Helvetica,Arial,sans-serif;
-  font-size: 16px;
-  font-weight: 600;
-  letter-spacing: normal;
-  line-height: 1.5;
-  outline: none;
-  overflow: hidden;
-  padding: 13px 20px;
-  position: relative;
-  text-align: center;
+  border-width: 3px;
+  border-color: #41b853;
   text-decoration: none;
-  transform: translate3d(0, 0, 0);
-  transition: all .3s;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  white-space: nowrap;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding: 10px 10px 10px 10px;
+  background-color: #161b40;
 }
 
-button:hover, input[type=submit]:hover  {
-  background-color: #1e8449;
-  opacity: 1;
-  transform: translateY(0);
-  transition-duration: .35s;
-  box-shadow: rgba(39, 174, 96, .2) 0 6px 12px;
+button:hover, input[type=submit]:hover {
+  background-color: #102e14;
 }
 
-button:active, input[type=submit]:activ, button a:active {
+button:active, input[type=submit]:active, button a:active {
   transform: translateY(2px);
   transition-duration: .35s;
+}
+
+button a {
+  color: #41b853;
+}
+
+a {
+  text-decoration: none;
+}
+
+.social {
+  margin-top: 5%;
+  display: flex;
+  justify-content: center;
+  column-gap: 3%;
+}
+
+.footer {
+  margin-top: 1%;
+  margin-left: auto;
+  margin-right: auto; 
+  text-align: center;
 }
